--- a/conf/catalina.properties
+++ b/conf/catalina.properties
@@ -50,7 +50,7 @@ org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 #       ${catalina.base} path or the ${catalina.home} path contains a comma.
 #       Because double quotes are used for quoting, the double quote character
 #       may not appear in a path.
-common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar,${catalina.base}/common/lib,${catalina.home}/common/lib,${catalina.base}/common/lib/*.jar,${catalina.home}/common/lib/*.jar"
+common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar","${catalina.base}/common/lib","${catalina.home}/common/lib","${catalina.base}/common/lib/*.jar","${catalina.home}/common/lib/*.jar"
 
 #
 # List of comma-separated paths defining the contents of the "server"
@@ -87,7 +87,7 @@ server.loader=
 #       ${catalina.base} path or the ${catalina.home} path contains a comma.
 #       Because double quotes are used for quoting, the double quote character
 #       may not appear in a path.
-shared.loader=${catalina.base}/shared/lib,${catalina.home}/shared/lib,${catalina.base}/shared/lib/*.jar,${catalina.home}/shared/lib/*.jar
+shared.loader="${catalina.base}/shared/lib","${catalina.home}/shared/lib","${catalina.base}/shared/lib/*.jar","${catalina.home}/shared/lib/*.jar"
 
 # Default list of JAR files that should not be scanned using the JarScanner
 # functionality. This is typically used to scan JARs for configuration
