Reducing the number of layers.

--- a/mysql-10/Dockerfile
+++ b/mysql-10/Dockerfile
@@ -2,48 +2,37 @@
 FROM openweb/oracle-tomcat:8-jre8
 MAINTAINER Ebrahim Aharpour <ebrahim@openweb.nl>
 
-# General configuration
-ENV ENCODING=UTF-8
-ENV CATALINA_HOME /usr/local/tomcat
-
-# JVM configuration
-ENV MAX_HEAP=512
-ENV MIN_HEAP=256
-ENV EXTERA_OPTS=
-
-# RMI configuration
-ENV RMI_SERVER_HOSTNAME=127.0.0.1
-
-# Mail Session configuration
-ENV MAIL_SESSION_RESOURCE_NAME=mail/Session
-ENV MAIL_USERNAME=
-ENV MAIL_PASSWORD=
-ENV MAIL_HOST=localhost
-ENV MAIL_DEBUG=false
-ENV MAIL_PROTOCOL=smtp
-ENV MAIL_AUTH=true
-ENV MAIL_PORT=25
-ENV MAIL_TLS_ENABLE=true
-
-# Database configuration
-ENV DB_RESOURCE_NAME=jdbc/repositoryDS
-ENV DB_HOST=
-ENV DB_PORT=3306
-ENV DB_NAME=hippo
-ENV DB_USER=hippo
-ENV DB_PASS=
-
-# JDBC configuration
-ENV MYSQL_CONNECTOR_VERSION=5.1.38
-
-# Repository configuration
-ENV CONSISTENCY_CHECK=none
+ENV ENCODING=UTF-8 \
+    CATALINA_HOME=/usr/local/tomcat \
+\
+    MAX_HEAP=512 \
+    MIN_HEAP=256 \
+    EXTERA_OPTS="" \
+\
+    RMI_SERVER_HOSTNAME=127.0.0.1 \
+\
+    MAIL_SESSION_RESOURCE_NAME=mail/Session \
+    MAIL_USERNAME="" \
+    MAIL_PASSWORD="" \
+    MAIL_HOST=localhost \
+    MAIL_DEBUG=false \
+    MAIL_PROTOCOL=smtp \
+    MAIL_AUTH=true \
+    MAIL_PORT=25 \
+    MAIL_TLS_ENABLE=true \
+\
+    DB_RESOURCE_NAME=jdbc/repositoryDS \
+    DB_HOST="" \
+    DB_PORT=3306 \
+    DB_NAME=hippo \
+    DB_USER=hippo \
+    DB_PASS="" \
+\
+    MYSQL_CONNECTOR_VERSION=5.1.38 \
+\
+    CONSISTENCY_CHECK=none
 
 WORKDIR $CATALINA_HOME
-
-RUN rm -rf $CATALINA_HOME/webapps/*
-RUN mkdir -p $CATALINA_HOME/endorsed
-RUN curl -s -o $CATALINA_HOME/endorsed/mysql-connector-java-$MYSQL_CONNECTOR_VERSION.jar -L https://repo1.maven.org/maven2/mysql/mysql-connector-java/$MYSQL_CONNECTOR_VERSION/mysql-connector-java-$MYSQL_CONNECTOR_VERSION.jar
 
 COPY bin/setenv.sh $CATALINA_HOME/bin/setenv.sh
 COPY conf/repository.xml $CATALINA_HOME/conf/repository.xml
@@ -55,7 +44,10 @@ COPY conf/catalina.properties $CATALINA_HOME/conf/catalina.properties
 COPY conf/catalina.policy $CATALINA_HOME/conf/catalina.policy
 COPY conf/log4j.xml $CATALINA_HOME/conf/log4j.xml
 
-RUN chmod +x $CATALINA_HOME/bin/setenv.sh
+RUN rm -rf $CATALINA_HOME/webapps/* &&\
+    mkdir -p $CATALINA_HOME/endorsed &&\
+    curl -s -o $CATALINA_HOME/endorsed/mysql-connector-java-$MYSQL_CONNECTOR_VERSION.jar -L https://repo1.maven.org/maven2/mysql/mysql-connector-java/$MYSQL_CONNECTOR_VERSION/mysql-connector-java-$MYSQL_CONNECTOR_VERSION.jar &&\
+	chmod +x $CATALINA_HOME/bin/setenv.sh
 
 EXPOSE 1099
 
