--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -30,6 +30,7 @@ ENV ENCODING=UTF-8 \
 \
     MYSQL_CONNECTOR_VERSION=5.1.38 \
 \
+    REPO_BOOTSTRAP=true \
     CONSISTENCY_CHECK=none
 
 WORKDIR $CATALINA_HOME
