making the value of -Drepo.upgrade dynamic

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -31,6 +31,7 @@ ENV ENCODING=UTF-8 \
     MYSQL_CONNECTOR_VERSION=5.1.38 \
 \
     REPO_BOOTSTRAP=true \
+    REPO_UPGRADE=false \
     CONSISTENCY_CHECK=none
 
 WORKDIR $CATALINA_HOME
