Adding mail.smtp.localhost configuration for EHLO/Hello authentication (By default it fall back to localhost)

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -15,6 +15,7 @@ ENV ENCODING=UTF-8 \
     MAIL_USERNAME="" \
     MAIL_PASSWORD="" \
     MAIL_HOST=localhost \
+    MAIL_LOCAL_HOST=localhost \
     MAIL_DEBUG=false \
     MAIL_PROTOCOL=smtp \
     MAIL_AUTH=true \
