Adding a switch to turning setting or node id on and off. Because in some testing env one might want node id switched off.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -33,6 +33,7 @@ ENV ENCODING=UTF-8 \
     MYSQL_CONNECTOR_VERSION=5.1.38 \
 \
     REPO_BOOTSTRAP=true \
+    SET_NODE_ID=true \
     CONSISTENCY_CHECK=none
 
 WORKDIR $CATALINA_HOME
