Adding Max connection setting and setting the connector to Http11Nio2Protocol.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -11,6 +11,7 @@ ENV ENCODING=UTF-8 \
 \
     MAX_THREADS=20 \
     ACCEPT_COUNT=250 \
+    MAX_CONNECTIONS=1000 \
 \
     RMI_SERVER_HOSTNAME=127.0.0.1 \
 \
