Making connection timeout configurable.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -12,6 +12,7 @@ ENV ENCODING=UTF-8 \
     MAX_THREADS=20 \
     ACCEPT_COUNT=250 \
     MAX_CONNECTIONS=1000 \
+    CONNECTION_TIMEOUT=20000 \
 \
     RMI_SERVER_HOSTNAME=127.0.0.1 \
 \
