Setting -XX:MaxMetaspaceSize and -XX:MaxDirectMemorySize.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -8,6 +8,8 @@ ENV ENCODING=UTF-8 \
     MAX_HEAP="" \
     MIN_HEAP="" \
     MAX_RAM_PERCENTAGE=25 \
+    MAX_METASPACE_SIZE=200 \
+    MAX_DIRECT_MEMORY_SIZE=100 \
     EXTRA_OPTS="" \
 \
     MAX_THREADS=16 \
