Making it possible to enable rmi via an environment variable.

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -17,6 +17,7 @@ ENV ENCODING=UTF-8 \
     MAX_CONNECTIONS=5000 \
     CONNECTION_TIMEOUT=20000 \
 \
+    ENABLE_RMI=false \
     RMI_SERVER_HOSTNAME=127.0.0.1 \
 \
     MAIL_SESSION_RESOURCE_NAME=mail/Session \
