--- a/image/conf/context.xml.template
+++ b/image/conf/context.xml.template
@@ -32,6 +32,6 @@
           timeBetweenEvictionRunsMillis="10000"
           minEvictableIdleTimeMillis="60000"
           username="${DB_USER}" password="${DB_PASS}"
-          driverClassName="com.mysql.jdbc.Driver"
+          driverClassName="com.mysql.cj.jdbc.Driver"
           url="jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?characterEncoding=utf8&amp;useSSL=false"/>
 </Context>
