--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -2,44 +2,36 @@ version: '2'
 
 services:
   hippo:
-    image: openweb/hippo:mysql-13
+    image: openweb/hippo:postgresql-13
     networks:
       - app_network
     volumes:
       - hippo_repository:/usr/local/repository/
       - hippo_logs:/usr/local/tomcat/logs
     environment:
-      DB_HOST: "database"
-      DB_PORT: "3306"
+      DB_HOST: "postgres"
+      DB_PORT: "5432"
       DB_NAME: "hippo"
       DB_USER: "hippo"
       DB_PASS: "hippoPassword"
     depends_on:
-      - mysql
+      - postgres
     ports:
       - "8765:8080"
     restart: always
-  mysql:
-    image: mysql:5.7
-    volumes:
-      - mysql_data:/var/lib/mysql
+  postgres:
+    image: postgres:12
     environment:
-      MYSQL_ROOT_PASSWORD: "rootPassword"
-      MYSQL_DATABASE: "hippo"
-      MYSQL_USER: "hippo"
-      MYSQL_PASSWORD: "hippoPassword"
-    networks:
-      app_network:
-        aliases:
-          - database
+      POSTGRES_USER: "hippo"
+      POSTGRES_DB: "hippo"
+      POSTGRES_PASSWORD: "hippoPassword"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     restart: always
 volumes:
-  mysql_data:
+  postgres_data:
     driver: local
   hippo_repository:
     driver: local
   hippo_logs:
-    driver: local 
-networks:
-  app_network:
-    driver: bridge
+    driver: local
