--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   hippo:
-    image: openweb/hippo:mysql-13
+    image: openweb/hippo:mysql-15
     networks:
       - app_network
     volumes:
@@ -20,7 +20,7 @@ services:
       - "8765:8080"
     restart: always
   mysql:
-    image: mysql:5.7
+    image: mysql:5.7-debian
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
@@ -39,7 +39,7 @@ volumes:
   hippo_repository:
     driver: local
   hippo_logs:
-    driver: local 
+    driver: local
 networks:
   app_network:
     driver: bridge
