--- a/image/conf/catalina.properties
+++ b/image/conf/catalina.properties
@@ -50,7 +50,7 @@ org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 #       ${catalina.base} path or the ${catalina.home} path contains a comma.
 #       Because double quotes are used for quoting, the double quote character
 #       may not appear in a path.
-common.loader="${catalina.base}/lib","${catalina.base}/lib/*.jar","${catalina.home}/lib","${catalina.home}/lib/*.jar","${catalina.base}/common/lib","${catalina.home}/common/lib","${catalina.base}/common/lib/*.jar","${catalina.home}/common/lib/*.jar"
+common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,${catalina.base}/common/lib,${catalina.base}/common/lib/*.jar,${catalina.home}/common/lib,${catalina.home}/common/lib/*.jar
 
 #
 # List of comma-separated paths defining the contents of the "server"
@@ -87,7 +87,7 @@ server.loader=
 #       ${catalina.base} path or the ${catalina.home} path contains a comma.
 #       Because double quotes are used for quoting, the double quote character
 #       may not appear in a path.
-shared.loader="${catalina.base}/shared/lib","${catalina.home}/shared/lib","${catalina.base}/shared/lib/*.jar","${catalina.home}/shared/lib/*.jar"
+shared.loader=${catalina.base}/shared/lib,${catalina.base}/shared/lib/*.jar,${catalina.home}/shared/lib,${catalina.home}/shared/lib/*.jar
 
 # Default list of JAR files that should not be scanned using the JarScanner
 # functionality. This is typically used to scan JARs for configuration
@@ -108,23 +108,25 @@ shared.loader="${catalina.base}/shared/lib","${catalina.home}/shared/lib","${cat
 tomcat.util.scan.StandardJarScanFilter.jarsToSkip=\
 annotations-api.jar,\
 ant-junit*.jar,\
-ant-launcher.jar,\
-ant.jar,\
+ant-launcher*.jar,\
+ant*.jar,\
 asm-*.jar,\
 aspectj*.jar,\
+bcel*.jar,\
+biz.aQute.bnd*.jar,\
 bootstrap.jar,\
 catalina-ant.jar,\
 catalina-ha.jar,\
-catalina-jmx-remote.jar,\
+catalina-ssi.jar,\
 catalina-storeconfig.jar,\
 catalina-tribes.jar,\
-catalina-ws.jar,\
 catalina.jar,\
 cglib-*.jar,\
 cobertura-*.jar,\
 commons-beanutils*.jar,\
 commons-codec*.jar,\
 commons-collections*.jar,\
+commons-compress*.jar,\
 commons-daemon.jar,\
 commons-dbcp*.jar,\
 commons-digester*.jar,\
@@ -135,21 +137,25 @@ commons-lang*.jar,\
 commons-logging*.jar,\
 commons-math*.jar,\
 commons-pool*.jar,\
+derby-*.jar,\
 dom4j-*.jar,\
 easymock-*.jar,\
 ecj-*.jar,\
 el-api.jar,\
 geronimo-spec-jaxrpc*.jar,\
 h2*.jar,\
+ha-api-*.jar,\
 hamcrest-*.jar,\
 hibernate*.jar,\
 httpclient*.jar,\
 icu4j-*.jar,\
+jakartaee-migration-*.jar,\
 jasper-el.jar,\
 jasper.jar,\
 jaspic-api.jar,\
 jaxb-*.jar,\
 jaxen-*.jar,\
+jaxws-rt-*.jar,\
 jdom-*.jar,\
 jetty-*.jar,\
 jmx-tools.jar,\
@@ -163,6 +169,8 @@ log4j*.jar,\
 mail*.jar,\
 objenesis-*.jar,\
 oraclepki.jar,\
+org.hamcrest.core_*.jar,\
+org.junit_*.jar,\
 oro-*.jar,\
 servlet-api-*.jar,\
 servlet-api.jar,\
@@ -171,16 +179,9 @@ taglibs-standard-spec-*.jar,\
 tagsoup-*.jar,\
 tomcat-api.jar,\
 tomcat-coyote.jar,\
+tomcat-coyote-ffm.jar,\
 tomcat-dbcp.jar,\
-tomcat-i18n-de.jar,\
-tomcat-i18n-en.jar,\
-tomcat-i18n-es.jar,\
-tomcat-i18n-fr.jar,\
-tomcat-i18n-ja.jar,\
-tomcat-i18n-ko.jar,\
-tomcat-i18n-pt-BR.jar,\
-tomcat-i18n-ru.jar,\
-tomcat-i18n-zh-CN.jar,\
+tomcat-i18n-*.jar,\
 tomcat-jdbc.jar,\
 tomcat-jni.jar,\
 tomcat-juli-adapters.jar,\
@@ -189,7 +190,9 @@ tomcat-util-scan.jar,\
 tomcat-util.jar,\
 tomcat-websocket.jar,\
 tools.jar,\
+unboundid-ldapsdk-*.jar,\
 websocket-api.jar,\
+websocket-client-api.jar,\
 wsdl4j*.jar,\
 xercesImpl.jar,\
 xml-apis.jar,\
@@ -204,7 +207,7 @@ xom-*.jar
 # scan types by configuring a JarScanner with a nested JarScanFilter.
 tomcat.util.scan.StandardJarScanFilter.jarsToScan=\
 log4j-taglib*.jar,\
-log4j-web*.jar,\
+log4j-jakarta-web*.jar,\
 log4javascript*.jar,\
 slf4j-taglib*.jar
 
@@ -213,3 +216,7 @@ tomcat.util.buf.StringCache.byte.enabled=true
 #tomcat.util.buf.StringCache.char.enabled=true
 #tomcat.util.buf.StringCache.trainThreshold=500000
 #tomcat.util.buf.StringCache.cacheSize=5000
+
+# Disable use of some privilege blocks Tomcat doesn't need since calls to the
+# code in question are always already inside a privilege block
+org.apache.el.GET_CLASSLOADER_USE_PRIVILEGED=false
